--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="bio.jpg" alt="" width="131px" height="160px" />&nbsp;</td>
-<td align="left"><p>I am a first year Ph.D. student in the Department of <a href="https://orfe.princeton.edu/home">Operations Research and Financial Engineering</a> at Princeton University. Before coming to Princeton, I received my bachelor's degree from School of Mathematical Sciences at Peking University in 2021.
+<td align="left"><p>I am a first year Ph.D. student in the Department of <a href="https://orfe.princeton.edu/home">Operations Research and Financial Engineering</a> at Princeton University. Before coming to Princeton, I received my bachelor's degree from School of Mathematical Sciences at Peking University in 2021.<br />
 E-mail: <i>shangetang</i> [@] princeton [DOT] edu</p>
 </td></tr></table>
 </td>
