--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1>Shange Tang </h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="bio.jpg" alt="90" width="135px" />&nbsp;</td>
+<img src="bio.jpg" alt="" width="140px" height="203px" />&nbsp;</td>
 <td align="left"><p>I am a second year Ph.D. student in the Department of <a href="https://orfe.princeton.edu/home">Operations Research and Financial Engineering</a> at Princeton University under the supervision of Professor <a href="https://fan.princeton.edu/">Jianqing Fan</a> and Professor <a href="https://sites.google.com/view/cjin/home">Chi Jin</a>. Before coming to Princeton, I received my bachelor's degree from School of Mathematical Sciences at Peking University in 2021.<br />
 I am interested in statistics and machine learning.<br />
 E-mail: <i>shangetang</i> [@] princeton [DOT] edu</p>
