--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
 I am interested in statistics and machine learning.<br />
 E-mail: <i>shangetang</i> [@] princeton [DOT] edu</p>
 </td></tr></table>
+<h2>Research</h2>
+<p>My research interests include </p>
+<ul>
+<li><p>Unsupervised Pretraining </p>
+</li>
+<li><p>Transfer Learning</p>
+</li>
+<li><p>Domain Adaptation</p>
+</li>
+</ul>
+<h3>Recent Publications </h3>
+<ol>
+<li><p>Jiawei Ge<b>, Shange Tang</b>, Jianqing Fan, Chi Jin, "On the Provable Advantage of Unsupervised Pretraining.
+", arXiv preprint arXiv:2303.01566 (2023). [<a href="https://arxiv.org/abs/2303.01566/">arXiv</a>]</p>
+</li>
+</ol>
 </td>
 </tr>
 </table>
