--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@ E-mail: <i>shangetang</i> [@] princeton [DOT] edu</p>
 <h3>Recent Publications </h3>
 <ol>
 <li><p>Jiawei Ge<b>, Shange Tang</b>, Jianqing Fan, Chi Jin, "On the Provable Advantage of Unsupervised Pretraining.
-", arXiv preprint arXiv:2303.01566 (2023). [<a href="https://arxiv.org/abs/2303.01566/">arXiv</a>]</p>
+", arXiv preprint arXiv:2303.01566 (2023). [<a href="https://arxiv.org/abs/2303.01566/">arXiv</a>] </p>
+</li>
+<li><p>Jiawei Ge<b>, Shange Tang</b>, Jianqing Fan, Cong Ma, Chi Jin, "Maximum Likelihood Estimation is All You Need for Well-Specified Covariate Shift.
+", arXiv preprint arXiv:2311.15961 (2023). [<a href="https://arxiv.org/abs/2311.15961/">arXiv</a>]</p>
 </li>
 </ol>
 </td>
