--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="bio.jpg" alt="" width="140px" height="203px" />&nbsp;</td>
-<td align="left"><p>I am a second year Ph.D. student in the Department of <a href="https://orfe.princeton.edu/home">Operations Research and Financial Engineering</a> at Princeton University under the supervision of Professor <a href="https://fan.princeton.edu/">Jianqing Fan</a> and Professor <a href="https://sites.google.com/view/cjin/home">Chi Jin</a>. Before coming to Princeton, I received my bachelor's degree from School of Mathematical Sciences at Peking University in 2021.<br />
+<td align="left"><p>I am a fourth year Ph.D. student in the Department of <a href="https://orfe.princeton.edu/home">Operations Research and Financial Engineering</a> at Princeton University under the supervision of Professor <a href="https://fan.princeton.edu/">Jianqing Fan</a> and Professor <a href="https://sites.google.com/view/cjin/home">Chi Jin</a>. Before coming to Princeton, I received my bachelor's degree from School of Mathematical Sciences at Peking University in 2021.<br />
 I am interested in statistics and machine learning.<br />
 E-mail: <i>shangetang</i> [@] princeton [DOT] edu</p>
 </td></tr></table>
@@ -36,16 +36,26 @@ E-mail: <i>shangetang</i> [@] princeton [DOT] edu</p>
 </li>
 <li><p>Domain Adaptation</p>
 </li>
+<li><p>Clustering</p>
+</li>
+<li><p>Factor Models</p>
+</li>
 </ul>
 <h3>Recent Publications </h3>
 <ol>
-<li><p>Jiawei Ge<b>, Shange Tang</b>, Jianqing Fan, Chi Jin, "On the Provable Advantage of Unsupervised Pretraining.
-", arXiv preprint arXiv:2303.01566 (2023). [<a href="https://arxiv.org/abs/2303.01566/">arXiv</a>] </p>
+<li><p>Jiawei Ge*, <b>Shange Tang*</b>, Jianqing Fan, Chi Jin, "On the Provable Advantage of Unsupervised Pretraining.
+", International Conference on Learning Representations (ICLR) 2024, spotlight. [<a href="https://arxiv.org/abs/2303.01566/">arXiv</a>] </p>
 </li>
-<li><p>Jiawei Ge<b>, Shange Tang</b>, Jianqing Fan, Cong Ma, Chi Jin, "Maximum Likelihood Estimation is All You Need for Well-Specified Covariate Shift.
-", arXiv preprint arXiv:2311.15961 (2023). [<a href="https://arxiv.org/abs/2311.15961/">arXiv</a>]</p>
+<li><p>Jiawei Ge*, <b>Shange Tang*</b>, Jianqing Fan, Cong Ma, Chi Jin, "Maximum Likelihood Estimation is All You Need for Well-Specified Covariate Shift.
+", International Conference on Learning Representations (ICLR) 2024. [<a href="https://arxiv.org/abs/2311.15961/">arXiv</a>]</p>
+</li>
+<li><p><b>Shange Tang</b>, Soham Jana, Jianqing Fan, "Factor Adjusted Spectral Clustering for Mixture Models.
+", arXiv preprint arXiv:2408.12564 (2024). [<a href="https://arxiv.org/abs/2408.12564v1/">arXiv</a>]</p>
 </li>
 </ol>
+<p>* denotes equal contribution.</p>
+<p><br />
+<a href="CV.pdf">A brief cv</a>.</p>
 </td>
 </tr>
 </table>
