--- a/research.html
+++ b/research.html
@@ -21,6 +21,32 @@
 <div id="toptitle">
 <h1>Research</h1>
 </div>
+<p>My research interests include </p>
+<ul>
+<li><p>Unsupervised Pretraining </p>
+</li>
+<li><p>Transfer Learning</p>
+</li>
+<li><p>Domain Adaptation</p>
+</li>
+<li><p>Clustering</p>
+</li>
+<li><p>Factor Models</p>
+</li>
+</ul>
+<h3>Recent Publications </h3>
+<ol>
+<li><p>Jiawei Ge*, <b>Shange Tang*</b>, Jianqing Fan, Chi Jin, "On the Provable Advantage of Unsupervised Pretraining.
+", International Conference on Learning Representations (ICLR) 2024, spotlight. [<a href="https://arxiv.org/abs/2303.01566/">arXiv</a>] </p>
+</li>
+<li><p>Jiawei Ge*, <b>Shange Tang*</b>, Jianqing Fan, Cong Ma, Chi Jin, "Maximum Likelihood Estimation is All You Need for Well-Specified Covariate Shift.
+", International Conference on Learning Representations (ICLR) 2024. [<a href="https://arxiv.org/abs/2311.15961/">arXiv</a>]</p>
+</li>
+<li><p><b>Shange Tang</b>, Soham Jana, Jianqing Fan, "Factor Adjusted Spectral Clustering for Mixture Models.
+", arXiv preprint arXiv:2408.12564 (2024). [<a href="https://arxiv.org/abs/2408.12564v1/">arXiv</a>]</p>
+</li>
+</ol>
+<p>* denotes equal contribution.</p>
 <div class="infoblock">
 <div class="blockcontent">
 </div></div>
