--- a/teaching.html
+++ b/teaching.html
@@ -21,6 +21,15 @@
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
+<p>I served as TA for Princeton University in the following courses:</p>
+<ul>
+<li><p>COS 511: Theoretical Machine Learning, Fall 2023</p>
+</li>
+<li><p>ORF 245: Fundamentals of Statistics, Spring 2023, Spring 2024</p>
+</li>
+<li><p>ORF 309: Probability and Stochastic Systems, Fall 2022</p>
+</li>
+</ul>
 <div class="infoblock">
 <div class="blockcontent">
 </div></div>
