--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">menu</div>
+<div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-category">useful links</div>
+<div class="menu-category">Useful links</div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
