--- a/index.html
+++ b/index.html
@@ -24,19 +24,16 @@
 <table class="imgtable"><tr><td>
 <img src="bio.jpg" alt="" width="140px" height="203px" />&nbsp;</td>
 <td align="left"><p>I am a fourth year Ph.D. student in the Department of <a href="https://orfe.princeton.edu/home">Operations Research and Financial Engineering</a> at Princeton University under the supervision of Professor <a href="https://fan.princeton.edu/">Jianqing Fan</a> and Professor <a href="https://sites.google.com/view/cjin/home">Chi Jin</a>. Before coming to Princeton, I received my bachelor's degree from School of Mathematical Sciences at Peking University in 2021.<br />
-I am interested in statistics and machine learning.<br />
-E-mail: <i>shangetang</i> [@] princeton [DOT] edu</p>
+I am interested in theory and applications of statistics and machine learning.<br />
+E-mail: <i>shangetang</i> [@] princeton [DOT] edu <br />
+<a href="https://scholar.google.com/citations?user=UmITOE0AAAAJ">Google Scholar</a></p>
 </td></tr></table>
 <h2>Research</h2>
-<p>My research interests include </p>
+<p>My recent research interests include </p>
 <ul>
-<li><p>Unsupervised Pretraining </p>
+<li><p>Automated theorem proving with LLMs</p>
 </li>
-<li><p>Transfer Learning</p>
-</li>
-<li><p>Domain Adaptation</p>
-</li>
-<li><p>Clustering</p>
+<li><p>Out-of-Distribution (OOD) generalization</p>
 </li>
 <li><p>Factor Models</p>
 </li>
@@ -51,6 +48,15 @@ E-mail: <i>shangetang</i> [@] princeton [DOT] edu</p>
 </li>
 <li><p><b>Shange Tang</b>, Soham Jana, Jianqing Fan, "Factor Adjusted Spectral Clustering for Mixture Models.
 ", arXiv preprint arXiv:2408.12564 (2024). [<a href="https://arxiv.org/abs/2408.12564v1/">arXiv</a>]</p>
+</li>
+<li><p><b>Shange Tang*</b>, Jiayun Wu*, Jianqing Fan, Chi Jin, "Benign Overfitting in Out-of-Distribution Generalization of Linear Models.
+", arXiv preprint arXiv:2412.14474 (2024). [<a href="https://arxiv.org/abs/2412.14474/">arXiv</a>]</p>
+</li>
+<li><p>Kaixuan Huang, Jiacheng Guo, Zihao Li, Xiang Ji, Jiawei Ge, Wenzhe Li, Yingqing Guo, Tianle Cai, Hui Yuan, Runzhe Wang, Yue Wu, Ming Yin, <b>Shange Tang</b>, Yangsibo Huang, Chi Jin, Xinyun Chen, Chiyuan Zhang, Mengdi Wang. "MATH-Perturb: Benchmarking LLMs&rsquo; Math Reasoning Abilities against Hard Perturbations
+", arXiv preprint arXiv:2502.06453 (2025). [<a href="https://arxiv.org/abs/2502.06453/">arXiv</a>]</p>
+</li>
+<li><p>Yong Lin*, <b>Shange Tang*</b>, Bohan Lyu, Jiayun Wu, Hongzhou Lin, Kaiyu Yang, Jia Li, Mengzhou Xia, Danqi Chen, Sanjeev Arora, Chi Jin. "Goedel-Prover: A Frontier Model for Open-Source Automated Theorem Proving
+", arXiv preprint arXiv:2502.07640 (2025). [<a href="https://arxiv.org/abs/2502.07640/">arXiv</a>]</p>
 </li>
 </ol>
 <p>* denotes equal contribution.</p>
