--- a/research.html
+++ b/research.html
@@ -11,25 +11,21 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">menu</div>
+<div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html" class="current">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-category">useful links</div>
+<div class="menu-category">Useful links</div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Research</h1>
 </div>
-<p>My research interests include </p>
+<p>My recent research interests include </p>
 <ul>
-<li><p>Unsupervised Pretraining </p>
+<li><p>Automated theorem proving with LLMs</p>
 </li>
-<li><p>Transfer Learning</p>
-</li>
-<li><p>Domain Adaptation</p>
-</li>
-<li><p>Clustering</p>
+<li><p>Out-of-Distribution (OOD) generalization</p>
 </li>
 <li><p>Factor Models</p>
 </li>
@@ -45,11 +41,17 @@
 <li><p><b>Shange Tang</b>, Soham Jana, Jianqing Fan, "Factor Adjusted Spectral Clustering for Mixture Models.
 ", arXiv preprint arXiv:2408.12564 (2024). [<a href="https://arxiv.org/abs/2408.12564v1/">arXiv</a>]</p>
 </li>
+<li><p><b>Shange Tang*</b>, Jiayun Wu*, Jianqing Fan, Chi Jin, "Benign Overfitting in Out-of-Distribution Generalization of Linear Models.
+", arXiv preprint arXiv:2412.14474 (2024). [<a href="https://arxiv.org/abs/2412.14474/">arXiv</a>]</p>
+</li>
+<li><p>Kaixuan Huang, Jiacheng Guo, Zihao Li, Xiang Ji, Jiawei Ge, Wenzhe Li, Yingqing Guo, Tianle Cai, Hui Yuan, Runzhe Wang, Yue Wu, Ming Yin, <b>Shange Tang</b>, Yangsibo Huang, Chi Jin, Xinyun Chen, Chiyuan Zhang, Mengdi Wang. "MATH-Perturb: Benchmarking LLMs&rsquo; Math Reasoning Abilities against Hard Perturbations
+", arXiv preprint arXiv:2502.06453 (2025). [<a href="https://arxiv.org/abs/2502.06453/">arXiv</a>]</p>
+</li>
+<li><p>Yong Lin*, <b>Shange Tang*</b>, Bohan Lyu, Jiayun Wu, Hongzhou Lin, Kaiyu Yang, Jia Li, Mengzhou Xia, Danqi Chen, Sanjeev Arora, Chi Jin. "Goedel-Prover: A Frontier Model for Open-Source Automated Theorem Proving
+", arXiv preprint arXiv:2502.07640 (2025). [<a href="https://arxiv.org/abs/2502.07640/">arXiv</a>]</p>
+</li>
 </ol>
 <p>* denotes equal contribution.</p>
-<div class="infoblock">
-<div class="blockcontent">
-</div></div>
 </td>
 </tr>
 </table>
