--- a/teaching.html
+++ b/teaching.html
@@ -11,11 +11,11 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">menu</div>
+<div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
-<div class="menu-category">useful links</div>
+<div class="menu-category">Useful links</div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -25,9 +25,11 @@
 <ul>
 <li><p>COS 511: Theoretical Machine Learning, Fall 2023</p>
 </li>
-<li><p>ORF 245: Fundamentals of Statistics, Spring 2023, Spring 2024</p>
+<li><p>ORF 245: Fundamentals of Statistics, Spring 2023, Spring 2024, Fall 2024</p>
 </li>
 <li><p>ORF 309: Probability and Stochastic Systems, Fall 2022</p>
+</li>
+<li><p>ORF 525: Statistical Foundations of Data Science, Spring 2025</p>
 </li>
 </ul>
 <div class="infoblock">
