--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ E-mail: <i>shangetang</i> [@] princeton [DOT] edu <br />
 </ul>
 <h3>Recent Publications </h3>
 <ol>
+<li><p><b>Shange Tang</b>, Yuanhao Wang, Chi Jin, "Is Elo Rating Reliable? A Study Under Model Misspecification.
+", arXiv preprint arXiv:2502.10985 (2025). [<a href="https://arxiv.org/abs/2502.10985/">arXiv</a>] </p>
+</li>
 <li><p>Yong Lin*, <b>Shange Tang*</b>, Bohan Lyu, Jiayun Wu, Hongzhou Lin, Kaiyu Yang, Jia Li, Mengzhou Xia, Danqi Chen, Sanjeev Arora, Chi Jin. "Goedel-Prover: A Frontier Model for Open-Source Automated Theorem Proving
 ", arXiv preprint arXiv:2502.07640 (2025). [<a href="https://arxiv.org/abs/2502.07640/">arXiv</a>]</p>
 </li>
