--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ E-mail: <i>shangetang</i> [@] princeton [DOT] edu <br />
 </ul>
 <h3>Recent Publications </h3>
 <ol>
+<li><p>Haoyu Zhao, Yihan Geng, <b>Shange Tang</b>, Yong Lin, Bohan Lyu, Hongzhou Lin, Chi Jin, Sanjeev Arora. "Ineq-Comp: Benchmarking Human-Intuitive Compositional Reasoning in Automated Theorem Proving on Inequalities.
+", arXiv preprint arXiv:2505.12680 (2025). [<a href="https://arxiv.org/abs/2505.12680/">arXiv</a>]</p>
+</li>
 <li><p><b>Shange Tang</b>, Yuanhao Wang, Chi Jin, "Is Elo Rating Reliable? A Study Under Model Misspecification.
 ", arXiv preprint arXiv:2502.10985 (2025). [<a href="https://arxiv.org/abs/2502.10985/">arXiv</a>] </p>
 </li>
